# models/Payment.js
@@ -1,0 +1,9 @@
+const mongoose = require('mongoose');
+
+const PaymentSchema = new mongoose.Schema({
+  loanId: { type: mongoose.Schema.Types.ObjectId, ref: 'Loan', required: true },
+  amount: { type: Number, required: true },
+  paymentDate: { type: Date, default: Date.now }
+});
+
+module.exports = mongoose.model('Payment', PaymentSchema);
